{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 57,
  "lineage": "496d9da0-7c70-39fb-6c62-9576de3e7a41",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-023453f8a6a59a647",
            "arn": "arn:aws:ec2:ap-southeast-1:076472864721:instance/i-0077ffa75388caca2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0077ffa75388caca2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-056d24e567683aabb"
              }
            ],
            "primary_network_interface_id": "eni-056d24e567683aabb",
            "private_dns": "ip-10-73-1-182.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.73.1.182",
            "public_dns": "ec2-54-254-187-13.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.254.187.13",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Project": "skills-ceh"
                },
                "tags_all": {
                  "Project": "skills-ceh"
                },
                "throughput": 125,
                "volume_id": "vol-0239ee9c6dbd286d3",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06047a982ff2a82e3",
            "tags": {
              "Name": "skills-ceh-ec2"
            },
            "tags_all": {
              "Name": "skills-ceh-ec2",
              "Project": "skills-ceh"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0087722568193bc0e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "i-0077ffa75388caca2",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.ec2.aws_security_group.protected",
            "module.ec2.data.aws_ami.amazon_linux",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:076472864721:security-group/sg-0087722568193bc0e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0087722568193bc0e",
            "ingress": [],
            "name": "skills-ceh-protected-sg",
            "name_prefix": "",
            "owner_id": "076472864721",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "skills-ceh-protected-sg"
            },
            "tags_all": {
              "Name": "skills-ceh-protected-sg",
              "Project": "skills-ceh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0436c7ab3ef244abe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "sg-0087722568193bc0e",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:076472864721:internet-gateway/igw-0ffcd7de3ad066348",
            "id": "igw-0ffcd7de3ad066348",
            "owner_id": "076472864721",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "skills-ceh-igw"
            },
            "tags_all": {
              "Name": "skills-ceh-igw",
              "Project": "skills-ceh"
            },
            "vpc_id": "vpc-0436c7ab3ef244abe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "igw-0ffcd7de3ad066348",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:076472864721:route-table/rtb-007bd9a7fb63f43fc",
            "id": "rtb-007bd9a7fb63f43fc",
            "owner_id": "076472864721",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ffcd7de3ad066348",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "skills-ceh-rt"
            },
            "tags_all": {
              "Name": "skills-ceh-rt",
              "Project": "skills-ceh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0436c7ab3ef244abe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtb-007bd9a7fb63f43fc",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0350f1104b1baf833",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-007bd9a7fb63f43fc",
            "subnet_id": "subnet-06047a982ff2a82e3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "rtbassoc-0350f1104b1baf833",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:076472864721:subnet/subnet-06047a982ff2a82e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.73.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06047a982ff2a82e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "076472864721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "skills-ceh-subnet"
            },
            "tags_all": {
              "Name": "skills-ceh-subnet",
              "Project": "skills-ceh"
            },
            "vpc_id": "vpc-0436c7ab3ef244abe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "subnet-06047a982ff2a82e3",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:076472864721:vpc/vpc-0436c7ab3ef244abe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.73.0.0/16",
            "default_network_acl_id": "acl-0ed3cc85da0da8ce9",
            "default_route_table_id": "rtb-067fd9b560aa378e6",
            "default_security_group_id": "sg-00ae21b3a8c88ed67",
            "dhcp_options_id": "dopt-0b325878680d47f1d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0436c7ab3ef244abe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-067fd9b560aa378e6",
            "owner_id": "076472864721",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "skills-ceh-vpc"
            },
            "tags_all": {
              "Name": "skills-ceh-vpc",
              "Project": "skills-ceh"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076472864721",
            "id": "vpc-0436c7ab3ef244abe",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}